--- a/packages/api/chart/templates/api/service.yaml
+++ b/packages/api/chart/templates/api/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: {{ include "chart.fullname" . }}
   namespace: {{ .Release.Namespace }}
   annotations:
     zarf.dev/connect-description: "Load the OpenAPI specification for the LeapfrogAI API"
     zarf.dev/connect-url: "/docs"
   labels:
-    zarf.dev/connect-name: leapfrogai-api
+    zarf.dev/connect-name: {{ include "chart.fullname" . }}
 spec:
   selector:
-    app: api
+    app: {{ include "chart.fullname" . }}
   ports:
     - name: http
       protocol: TCP
