Switch to official supabase postgres image

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -123,8 +123,8 @@ volumePermissions:
   resourcesPreset: "none"
 
 psqlImage:
-  repository: betaboon/bitnami-postgresql-wal2json
-  tag: 15.6.0-debian-12-r20
+  repository: supabase/postgres
+  tag: 15.6.1.106
 
 kong:
   enabled: ###ZARF_VAR_ENABLE_KONG###
@@ -189,8 +189,8 @@ kong:
 postgresql:
   enabled: ###ZARF_VAR_ENABLE_POSTGRES###
   image:
-    repository: betaboon/bitnami-postgresql-wal2json
-    tag: 15.6.0-debian-12-r20
+    repository: supabase/postgres
+    tag: 15.6.1.106
     debug: true
   primary:
     resourcesPreset: "none"
