--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -83,10 +83,12 @@ jobs:
 
         - name: Test Supabase
           run: |
+            python -m pip install requests
             python -m pytest ./tests/e2e/test_supabase.py -v
 
         - name: Test API
           run: |
+            python -m pip install requests
             python -m pytest ./tests/e2e/test_api.py -v
 
         ##########
