--- a/packages/whisper/chart/templates/pvc.yaml
+++ b/packages/whisper/chart/templates/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-    name: lfai-whisper-pv-claim
+    name: {{ include "chart.modelPVCName" . }}
     namespace: leapfrogai
 spec:
   {{- if .Values.persistence.storageClass }}
