--- a/packages/whisper/whisper-values.yaml
+++ b/packages/whisper/whisper-values.yaml
@@ -12,3 +12,6 @@ persistence:
   size: ###ZARF_VAR_PVC_SIZE###
   accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
   storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
+
+model:
+  name: ###ZARF_CONST_MODEL_NAME###
