--- a/packages/llama-cpp-python/llama-cpp-python-values.yaml
+++ b/packages/llama-cpp-python/llama-cpp-python-values.yaml
@@ -5,3 +5,7 @@ persistence:
   size: ###ZARF_VAR_PVC_SIZE###
   accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
   storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
+
+model:
+  name: ###ZARF_CONST_MODEL_NAME###
+  revision: ###ZARF_CONST_MODEL_REVISION###
