--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -101,14 +101,15 @@ jobs:
 
         - name: Create test user
           run: |
-            KEYCLOAK_ADMIN_USERNAME=$(./uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-username} | base64 -d)
-            KEYCLOAK_ADMIN_PASSWORD=$(./uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-password} | base64 -d)
+            KEYCLOAK_ADMIN_USERNAME=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-username} | base64 -d)
+            KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-password} | base64 -d)
             KEYCLOAK_ADMIN_TOKEN=$(curl -s --location "https://keycloak.admin.uds.dev/realms/master/protocol/openid-connect/token" \
+            --header "Content-Type: application/x-www-form-urlencoded" \
             --header "Content-Type: application/x-www-form-urlencoded" \
             --data-urlencode "username=${KEYCLOAK_ADMIN_USERNAME}" \
             --data-urlencode "password=${KEYCLOAK_ADMIN_PASSWORD}" \
             --data-urlencode "client_id=admin-cli" \
-            --data-urlencode "grant_type=password" | ./uds zarf tools yq .access_token)
+            --data-urlencode "grant_type=password" | uds zarf tools yq .access_token)
             curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/users" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
@@ -133,7 +134,7 @@ jobs:
             }'
               
             CONDITIONAL_OTP_ID=$(curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
-            --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" | ./uds zarf tools yq '.[] | select(.displayName == "Conditional OTP") | .id')
+            --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" | uds zarf tools yq '.[] | select(.displayName == "Conditional OTP") | .id')
 
             curl --location --request PUT "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
             --header "Content-Type: application/json" \
