Adds missing dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dev = [
     "requests-toolbelt",
     "pytest",
     "huggingface_hub[cli,hf_transfer]",
-    "fastapi"
+    "fastapi",
+    "supabase"
 ]
 
 dev-whisper = [
