--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -101,12 +101,11 @@ jobs:
 
         - name: Create test user
           run: |
-            KEYCLOAK_ADMIN_USERNAME=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-username} | base64 -d)
-            KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin -o jsonpath={.data.admin-password} | base64 -d)
+            KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin-password -o jsonpath={.data.password} | base64 -d)
             KEYCLOAK_ADMIN_TOKEN=$(curl -s --location "https://keycloak.admin.uds.dev/realms/master/protocol/openid-connect/token" \
             --header "Content-Type: application/x-www-form-urlencoded" \
             --header "Content-Type: application/x-www-form-urlencoded" \
-            --data-urlencode "username=${KEYCLOAK_ADMIN_USERNAME}" \
+            --data-urlencode "username=admin" \
             --data-urlencode "password=${KEYCLOAK_ADMIN_PASSWORD}" \
             --data-urlencode "client_id=admin-cli" \
             --data-urlencode "grant_type=password" | uds zarf tools yq .access_token)
