feat(ui): 669-annotations (#908)
* View documents used in RAG response directly in message by clicking on citation.

--- a/src/leapfrogai_ui/Dockerfile
+++ b/src/leapfrogai_ui/Dockerfile
@@ -1,4 +1,16 @@
 FROM node:18-alpine AS builder
+RUN apk update && apk upgrade && apk add --no-cache libreoffice openjdk11-jre
+
+# Add fonts for converting docs to pdfs
+RUN apk add --no-cache \
+    fontconfig \
+    msttcorefonts-installer \
+    && update-ms-fonts \
+    && fc-cache -f
+
+ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk
+ENV PATH=${JAVA_HOME}/bin:$PATH
+
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
@@ -8,16 +20,11 @@ ENV NODE_ENV=production
 RUN npm run build
 RUN npm prune
 
-FROM cgr.dev/chainguard/node:latest
-
-WORKDIR /app
-COPY --chown=node:node --from=builder /app/build build/
-COPY --chown=node:node --from=builder /app/node_modules node_modules/
-COPY --chown=node:node package.json .
-EXPOSE 3000
 ENV NODE_ENV=production
 # Disable request size limit
 ENV BODY_SIZE_LIMIT=Infinity
 ENV PROTOCOL_HEADER=x-forwarded-proto
 ENV HOST_HEADER=x-forwarded-host
+EXPOSE 3000
+
 CMD ["build"]
