--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -101,9 +101,8 @@ jobs:
 
         - name: Create Test User
           run: |
-            kubectl get pods -A
-            kubectl get secrets -A
-            echo $KEYCLOAK_ADMIN_PASSWORD
+            while ! uds zarf tools kubectl get secret keycloak-admin-password --namespace keycloak; do echo "Waiting for my secret."; sleep 10; done
+            KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin-password -o jsonpath={.data.password} | base64 -d)
             KEYCLOAK_ADMIN_TOKEN=$(curl -s --location "https://keycloak.admin.uds.dev/realms/master/protocol/openid-connect/token" \
             --header "Content-Type: application/x-www-form-urlencoded" \
             --header "Content-Type: application/x-www-form-urlencoded" \
