--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -16,7 +16,7 @@ on:
       # Ignore updates to the .github directory, unless it's this current file
       - "!.github/**"
       - ".github/workflows/e2e-playwright.yaml"
-      - ".github/actions/uds-cluster/action.yaml"
+      - ".github/actions/uds-cluster/**"
 
       # Ignore docs and website things
       - "!**.md"
