Add debugs and single quote

--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -102,6 +102,7 @@ jobs:
         - name: Create Test User
           run: |
             KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin-password -o jsonpath={.data.password} | base64 -d)
+            echo $KEYCLOAK_ADMIN_PASSWORD
             KEYCLOAK_ADMIN_TOKEN=$(curl -s --location "https://keycloak.admin.uds.dev/realms/master/protocol/openid-connect/token" \
             --header "Content-Type: application/x-www-form-urlencoded" \
             --header "Content-Type: application/x-www-form-urlencoded" \
@@ -131,17 +132,18 @@ jobs:
                 }
               ]
             }'
-              
+            echo "Passed ADMIN TOKEN STEP"
             CONDITIONAL_OTP_ID=$(curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" | uds zarf tools yq '.[] | select(.displayName == "Conditional OTP") | .id')
-
+            echo "Passed CONDITIONAL_OTP_ID STEP"
             curl --location --request PUT "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
-            --data "{
-            \"id\": \"${CONDITIONAL_OTP_ID}\",
-            \"requirement\": \"DISABLED\"
-            }"
+            --data '{
+              "id": "${CONDITIONAL_OTP_ID}",
+              "requirement": "DISABLED"
+            }'
+            echo "Passed ALL Steps"
 
         # Run the playwright UI tests using the deployed Supabase endpoint and upload report as an artifact
         - name: UI/API/Supabase E2E Playwright Tests
