Back to double quote

--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -110,6 +110,7 @@ jobs:
             --data-urlencode "password=${KEYCLOAK_ADMIN_PASSWORD}" \
             --data-urlencode "client_id=admin-cli" \
             --data-urlencode "grant_type=password" | uds zarf tools yq .access_token)
+            echo "Passed ADMIN TOKEN STEP"
             curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/users" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
@@ -132,17 +133,17 @@ jobs:
                 }
               ]
             }'
-            echo "Passed ADMIN TOKEN STEP"
+            echo "Passed CREATE USER Step"
             CONDITIONAL_OTP_ID=$(curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" | uds zarf tools yq '.[] | select(.displayName == "Conditional OTP") | .id')
             echo "Passed CONDITIONAL_OTP_ID STEP"
             curl --location --request PUT "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
-            --data '{
-              "id": "${CONDITIONAL_OTP_ID}",
-              "requirement": "DISABLED"
-            }'
+            --data "{
+            \"id\": \"${CONDITIONAL_OTP_ID}\",
+            \"requirement\": \"DISABLED\"
+            }"
             echo "Passed ALL Steps"
 
         # Run the playwright UI tests using the deployed Supabase endpoint and upload report as an artifact
