Add backend endpoint

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -39,7 +39,6 @@
     "@types/dompurify": "^3.0.5",
     "@types/eslint": "^8.56.10",
     "@types/lodash": "^4.17.7",
-    "@types/pdf-parse": "^1.1.4",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
@@ -91,6 +90,7 @@
     "libreoffice-convert": "^1.6.0",
     "lit": "^3.1.4",
     "markdown-it": "^14.1.0",
+    "mupdf": "^0.2.3",
     "openai": "^4.52.7",
     "sveltekit-superforms": "^2.16.0",
     "uuid": "^10.0.0",
