--- a/.github/workflows/e2e-playwright.yaml
+++ b/.github/workflows/e2e-playwright.yaml
@@ -101,48 +101,9 @@ jobs:
 
         - name: Create Test User
           run: |
-            KEYCLOAK_ADMIN_PASSWORD=$(uds zarf tools kubectl get secret -n keycloak keycloak-admin-password -o jsonpath={.data.password} | base64 -d)        
-            KEYCLOAK_ADMIN_TOKEN=$(curl -s --location "https://keycloak.admin.uds.dev/realms/master/protocol/openid-connect/token" \
-            --header "Content-Type: application/x-www-form-urlencoded" \
-            --data-urlencode "username=admin" \
-            --data-urlencode "password=${KEYCLOAK_ADMIN_PASSWORD}" \
-            --data-urlencode "client_id=admin-cli" \
-            --data-urlencode "grant_type=password" | uds zarf tools yq .access_token)
-            echo "Passed Admin token step"
-            curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/users" \
-            --header "Content-Type: application/json" \
-            --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
-            --data-raw '{
-              "username": "doug",
-              "firstName": "Doug",
-              "lastName": "Unicorn",
-              "email": "doug@uds.dev",
-              "attributes": {
-                "mattermostid": "1"
-              },
-              "emailVerified": true,
-              "enabled": true,
-              "requiredActions": [],
-              "credentials": [
-                {
-                  "type": "password",
-                  "value": "unicorn123!@#UN",
-                  "temporary": false
-                }
-              ]
-            }'
-            echo "Passed create user step"
-            CONDITIONAL_OTP_ID=$(curl --location "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
-            --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" | uds zarf tools yq '.[] | select(.displayName == "Conditional OTP") | .id')
-            echo "Passed conditional OTP step"
-            curl --location --request PUT "https://keycloak.admin.uds.dev/admin/realms/uds/authentication/flows/Authentication/executions" \
-            --header "Content-Type: application/json" \
-            --header "Authorization: Bearer ${KEYCLOAK_ADMIN_TOKEN}" \
-            --data "{
-            \"id\": \"${CONDITIONAL_OTP_ID}\",
-            \"requirement\": \"DISABLED\"
-            }"
-            echo "Passed all steps"
+            chmod +x ./.github/config/createUser.sh
+            ./.github/config/createUser.sh
+
         # Run the playwright UI tests using the deployed Supabase endpoint and upload report as an artifact
         - name: UI/API/Supabase E2E Playwright Tests
           run: |
