--- a/packages/text-embeddings/Makefile
+++ b/packages/text-embeddings/Makefile
@@ -1,6 +1,7 @@
 install:
 	python -m pip install ../../src/leapfrogai_sdk
-	python -m pip install -e .
+	python -m pip install -e ".[dev]"
+
 
 dev:
 	make install
