--- a/packages/llama-cpp-python/pyproject.toml
+++ b/packages/llama-cpp-python/pyproject.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
-    "huggingface_hub",
+    "huggingface_hub[cli,hf_transfer]"
 ]
 
 [tool.pip-tools]
