--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -19,7 +19,7 @@ readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
-    "huggingface_hub",
+    "huggingface_hub[cli,hf_transfer]"
 ]
 
 [tool.pip-tools]
